[gd_scene load_steps=5 format=3 uid="uid://cyhyaaiutgof8"]

[ext_resource type="Script" path="res://weapons/weapon_smg_1.gd" id="1_qh4y7"]
[ext_resource type="PackedScene" uid="uid://2767ee5lab1g" path="res://weapons/bullet_simple.tscn" id="2_3fsur"]
[ext_resource type="Texture2D" uid="uid://kjm5mkngurq6" path="res://weapons/texture/SMG 1.png" id="3_q51q4"]
[ext_resource type="Theme" uid="uid://7xs3fw8s4nwj" path="res://ui/themes/main_theme.tres" id="4_42s2t"]

[node name="Weapon_SMG_1" type="Node2D"]
script = ExtResource("1_qh4y7")
damage = 15
bullet_speed = 1800.0
bullet_lifetime = 1.0
mag_size = 30
fire_delay = 0.1
releod_delay = 0.05
pre_releod_delay = 0.8
inaccuracy = 10.0
instability = 1.0
instability_delay = 0.5
bullet = ExtResource("2_3fsur")
weapon_name = "SMG"
weapon_discription = "mo ammo, mo firerate and no controlability"

[node name="Pivot" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
position = Vector2(-34, 0)
scale = Vector2(-1, 1)
texture = ExtResource("3_q51q4")

[node name="Fire_Timer" type="Timer" parent="."]
one_shot = true

[node name="Reload_Timer" type="Timer" parent="."]
one_shot = true

[node name="Pre_Reload_Timer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -366.0
offset_top = -77.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_42s2t")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="Fire_Delay_Label" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "PH"

[node name="Reload_Delay_Label" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "PH"

[node name="PreReload_Delay_Label" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "PH"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="Name_Label" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "THE SnP .45 ACP SMG"

[node name="Mag_Label" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "PH"

[connection signal="timeout" from="Fire_Timer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="Reload_Timer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="Pre_Reload_Timer" to="." method="_on_pre_reload_timer_timeout"]
